Added a fill tool

--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
     <button id="exportBtn">Export Map</button>
     <button id="clearBtn">Clear Map</button>
     <button id="eraserBtn">Eraser</button>
+    <button id="fillBtn">Fill</button>
     <button id="print">Print</button>
-    <input type="number" id="columns" name="Columns" value="25">
     <input type="number" id="rows" name="Rows" value="20">
+    <input type="number" id="columns" name="Columns" value="25">
 
   </div>
 
