--- a/index.html
+++ b/index.html
@@ -60,21 +60,36 @@
 
     #clearBtn { background: #e54d2e; }
     #clearBtn:hover { background: #ff6b4a; }
-    
+
     #eraserBtn { background: #777; }
     #eraserBtn:hover { background: #999; }
 
     #container {
       display: flex;
+      gap: 20px;
+      padding: 15px;
+      align-items: flex-start;
+      flex-wrap: wrap;
+    }
+
+    .panel {
+      background: #444;
       padding: 10px;
+      border: 4px solid #000;
+    }
+
+    .panelGroup {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
     }
 
     #mapWrapper {
       position: relative;
-      margin-left: 10px;
     }
 
-    #map, #grid {
+    #map,
+    #grid {
       position: absolute;
       top: 0;
       left: 0;
@@ -84,15 +99,16 @@
       pointer-events: none;
     }
 
-    #tileset {
-      border: 4px solid #000;
-      background: #444;
-    }
-
     canvas {
       image-rendering: pixelated;
       image-rendering: crisp-edges; 
+      display: block;
     }
+
+    #tileset {
+      background: #444;
+    }
+
   </style>
 </head>
 <body>
@@ -104,12 +120,29 @@
   </div>
 
   <div id="container">
-    <canvas id="tileset"></canvas>
 
-    <div id="mapWrapper">
-      <canvas id="map"></canvas>
-      <canvas id="grid"></canvas>
+    <div class="panel" id="leftPanel">
+      <canvas id="tileset"></canvas>
     </div>
+
+    <div class="panel" id="centerPanel">
+      <div id="mapWrapper">
+        <canvas id="map"></canvas>
+        <canvas id="grid"></canvas>
+      </div>
+    </div>
+
+    <div class="panelGroup" id="rightPanel">
+      
+      <div class="panel">
+        <button id="addColumnBtn" class="addBtn">▶</button>
+      </div>
+
+      <div class="panel">
+        <button id="addRowBtn" class="addBtn">▼</button>
+      </div>
+    </div>
+
   </div>
 
   <script src="renderer.js"></script>
